use static prompt IIRC

--- a/iirc_generate_and_evaluate.ipynb
+++ b/iirc_generate_and_evaluate.ipynb
@@ -116,50 +116,55 @@
     "\n",
     "RANDOM_PROMPT = False\n",
     "KSHOT = 4\n",
+    "USE_STATIC_PROMPT = False\n",
+    "STATIC_PROMPT = \"For each example, use the documents to provide an answer to the question and cite evidence from the documents to support the answer. If there is not enough information in the documents to answer the question, then state \"not enough information\".\\n\\nExample 1:\\n\\nDocument 1: Title: Fred J. Shields. Content: Ollie Murphy\\'s first-half goal gave \\'the Royals\\' a huge boost at half-time.\\n\\nDocument 2: Title: Ollie Murphy. Content: He plays club football for Carnaross\\n\\nDocument 3: Title: Ollie Murphy. Content: He came to national prominence in 1999 when he was one of Meath\\'s best player\\'s\\n\\nQuestion: Based on the above documents, Did Ollie Murphy play for any teams other than \\'the Royals\\'?\\n\\nEvidence: Document 1 says that Ollie Murphy\\'s first-half goal gave \\'the Royals\\' a huge boost at half-time. However, this does not necessarily mean that Ollie only played for \\'the Royals\\'. Document 2 states that Ollie plays club football for Carnaross. This suggests that Ollie may have played for other teams in addition to \\'the Royals\\'. Document 3 says that Ollie came to national prominence in 1999 when he was one of Meath\\'s best players. This also suggests that Ollie has played for other teams. Therefore, it is likely that Ollie has played for teams other than \\'the Royals\\'.\\n\\nAnswer: yes.\\n\\nExample 2:\\n\\nDocument 1: Title: Don Rendell. Content: The club played in the Brunei Premier League in the early 2000s, winning the league title in 2002 and 2004.\\n\\nQuestion: Based on the above documents, What club came in second at the 2004 Brunei Premier League?\\n\\nEvidence:  There is not enough information in the documents to answer the question.\\n\\nAnswer: not enough information.\\n\\nExample 3:\\n\\nDocument 1: Title: Stacy Compton. Content: Despicable Me, the first film in the series, and the first film from Illumination, was released on July 9, 2010.\\n\\nDocument 2: Title: Miranda Cosgrove. Content: Cosgrove\\'s first television appearance (aside from commercials) was in 2001 as the voice of young Lana Lang in the pilot episode of Smallville.\\n\\nDocument 3: Title: Miranda Cosgrove. Content: In 2004, Cosgrove soon landed her first major role in a television series when she was awarded a main role in the Nickelodeon series Drake & Josh\\n\\nDocument 4: Title: Miranda Cosgrove. Content: Also in 2004, Cosgrove guest-starred in a special episode of the animated series What\\'s New, Scooby-Doo?, as well as guest-starring in a season five episode of Grounded For Life\\n\\nDocument 5: Title: Miranda Cosgrove. Content: The television series, which aired on Disney, is a spin-off of the original film, Lilo & Stitch\\n\\nDocument 6: Title: Miranda Cosgrove. Content: The first of these appearances was in Zoey 101. Cosgrove later guest starred on an episode of Unfabulous,\\n\\nDocument 7: Title: Miranda Cosgrove. Content: However, Cosgrove was already in the works of starring in her own sitcom, titled iCarly, released on September 8, 2007.\\n\\nQuestion: Based on the above documents, How many TV shows had Miranda Cosgrove been featured in by the year Despicable Me was released?\\n\\nEvidence: According to document 1, Despicable Me was released on July 9, 2010.Document 2 states that Cosgrove\\'s first television appearance was in 2001 as the voice of young Lana Lang in the pilot episode of Smallville.Document 3 says that, in 2004, Cosgrove landed her first major role in a television series when she was awarded a main role in the Nickelodeon series Drake & Josh.Document 4 states that, also in 2004, Cosgrove guest-starred in a special episode of the animated series What\\'s New, Scooby-Doo?, as well as guest-starring in a season five episode of Grounded For Life.Document 5 says that the television series, which aired on Disney, is a spin-off of the original film, Lilo & Stitch.Document 6 states that the first of these appearances was in Zoey 101. Cosgrove later guest starred on an episode of Unfabulous.Document 7 says that, however, Cosgrove was already in the works of starring in her own sitcom, titled iCarly, released on September 8, 2007.Therefore, Miranda Cosgrove had been featured in 8 TV shows by the year Despicable Me was released.\\n\\nAnswer: 8 TV shows.\\n\\nExample 4:\\n\\n\"\n",
     "\n",
     "test = []\n",
     "\n",
     "for q in tqdm(test_set):\n",
-    "    if RANDOM_PROMPT:\n",
-    "        hits = random.sample(dev, k=KSHOT)\n",
+    "    if USE_STATIC_PROMPT:\n",
+    "        prompt = STATIC_PROMPT\n",
     "    else:\n",
-    "        item_passage = \"\"\n",
-    "        for i,c in enumerate(q['context']):\n",
-    "            item_passage+= \"Document {0}: {1}\\n\\n\".format(i+1, c['text'])\n",
-    "        item_passage += \"{0}\".format(q['question'])\n",
-    "        \n",
-    "        item_embedding = model.encode(item_passage)\n",
-    "\n",
-    "        all_top = util.dot_score(item_embedding, passages_embeddings)[0].topk(KSHOT)\n",
-    "        if len(all_top.indices) == 1:\n",
-    "            hits = np.array(dev)[[all_top.indices]].tolist()\n",
+    "        if RANDOM_PROMPT:\n",
+    "            hits = random.sample(dev, k=KSHOT)\n",
     "        else:\n",
-    "            hits = np.array(dev)[all_top.indices].tolist()\n",
+    "            item_passage = \"\"\n",
+    "            for i,c in enumerate(q['context']):\n",
+    "                item_passage+= \"Document {0}: {1}\\n\\n\".format(i+1, c['text'])\n",
+    "            item_passage += \"{0}\".format(q['question'])\n",
+    "            \n",
+    "            item_embedding = model.encode(item_passage)\n",
     "\n",
-    "        hits.reverse()\n",
-    "    \n",
-    "    prompt = \"For each example, use the documents to create an \\\"Answer\\\" and an \\\"Evidence\\\" to the \\\"Question\\\". Answer \\\"not enough information\\\" when not enough information is provided in the documents.\\n\\n\"\n",
-    "    for i, hit in enumerate(hits):\n",
-    "        prompt += \"Example {0}:\\n\\n\".format(i+1)\n",
-    "        for j,c in enumerate(hit['context']):\n",
-    "            text = \"\"\n",
-    "            if c['passage'] == \"main\":\n",
-    "                text = \"Title: {0}. Content: {1}\".format(hit['title'],c['text'])\n",
+    "            all_top = util.dot_score(item_embedding, passages_embeddings)[0].topk(KSHOT)\n",
+    "            if len(all_top.indices) == 1:\n",
+    "                hits = np.array(dev)[[all_top.indices]].tolist()\n",
     "            else:\n",
-    "                text = \"Title: {0}. Content: {1}\".format(c['passage'],c['text'])\n",
-    "            prompt+= \"Document {0}: {1}\\n\\n\".format(j+1, text)\n",
-    "        answer = \"\"\n",
-    "        if hit['answer']['type'] == \"span\":\n",
-    "            answer = \", \".join([a['text'] for a in hit['answer'][\"answer_spans\"]])\n",
-    "        elif hit['answer']['type'] == \"value\":\n",
-    "            answer = \"{0} {1}\".format(hit['answer']['answer_value'],hit['answer']['answer_unit'])\n",
-    "        elif hit['answer']['type'] == \"binary\":\n",
-    "            answer = hit['answer']['answer_value']\n",
-    "        elif hit['answer']['type'] == \"none\":\n",
-    "            answer = \"Not enough information.\"\n",
-    "        prompt += \"Question: Based on the above documents, {0}\\n\\nEvidence: {1}\\n\\nAnswer: {2}.\\n\\n\".format(hit['question'], hit['explanation'].replace('\\n',''), answer)\n",
-    "    \n",
-    "    prompt += \"Example {0}:\\n\\n\".format(i+2)\n",
+    "                hits = np.array(dev)[all_top.indices].tolist()\n",
+    "\n",
+    "            hits.reverse()\n",
+    "        \n",
+    "        prompt = \"For each example, use the documents to create an \\\"Answer\\\" and an \\\"Evidence\\\" to the \\\"Question\\\". Answer \\\"not enough information\\\" when not enough information is provided in the documents.\\n\\n\"\n",
+    "        for i, hit in enumerate(hits):\n",
+    "            prompt += \"Example {0}:\\n\\n\".format(i+1)\n",
+    "            for j,c in enumerate(hit['context']):\n",
+    "                text = \"\"\n",
+    "                if c['passage'] == \"main\":\n",
+    "                    text = \"Title: {0}. Content: {1}\".format(hit['title'],c['text'])\n",
+    "                else:\n",
+    "                    text = \"Title: {0}. Content: {1}\".format(c['passage'],c['text'])\n",
+    "                prompt+= \"Document {0}: {1}\\n\\n\".format(j+1, text)\n",
+    "            answer = \"\"\n",
+    "            if hit['answer']['type'] == \"span\":\n",
+    "                answer = \", \".join([a['text'] for a in hit['answer'][\"answer_spans\"]])\n",
+    "            elif hit['answer']['type'] == \"value\":\n",
+    "                answer = \"{0} {1}\".format(hit['answer']['answer_value'],hit['answer']['answer_unit'])\n",
+    "            elif hit['answer']['type'] == \"binary\":\n",
+    "                answer = hit['answer']['answer_value']\n",
+    "            elif hit['answer']['type'] == \"none\":\n",
+    "                answer = \"Not enough information.\"\n",
+    "            prompt += \"Question: Based on the above documents, {0}\\n\\nEvidence: {1}\\n\\nAnswer: {2}.\\n\\n\".format(hit['question'], hit['explanation'].replace('\\n',''), answer)\n",
+    "        \n",
+    "        prompt += \"Example {0}:\\n\\n\".format(i+2)\n",
     "\n",
     "    \n",
     "    limit_per_query = 3\n",
